# NativeConsoleApplicationsRUST

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs
.docs/: HashCalc.md  UUIDGen.md  bannertext.md  printformat.md  uuidgen.md
.github/: dependabot.yml
.github/workflows/: actions-auto-update.yml  ci-build.yml  squad-heartbeat.yml  squad-issue-assign.yml  squad-triage.yml  sync-squad-labels.yml
.scripts/: GenerateExampleExpectedOutputText.ps1  Include-Scripts.ps1  PopulateHelpText.ps1
.squad/: .first-run  decisions.md  routing.md  team.md
.squad/agents/blake/: charter.md  history.md  test-report-hashcalc.md
.squad/agents/kiefer/: charter.md  history.md
.squad/agents/marcus/: charter.md  history.md
.squad/agents/ralph/: charter.md  history.md
.squad/agents/scribe/: charter.md  history.md
.squad/casting/: history.json  registry.json
.squad/decisions/: decisions.md
.squad/decisions/inbox/: marcus-deps-upgrade.md
.squad/identity/: now.md  wisdom.md
.squad/log/: 2026-03-29-hasher-refactoring.md  2026-06-04T15-11-02Z-csharp-format-support.md
.squad/orchestration-log/: 2026-03-29T20-24-23Z-kiefer.md  2026-03-29T20-24-23Z-marcus.md  2026-06-04T15-11-02Z-blake.md  2026-06-04T15-11-02Z-marcus.md
.squad/skills/rust-cli-testing/: SKILL.md
.squad/skills/rust-module-patterns/: SKILL.md
bannertext/: Cargo.toml
bannertext/src/: main.rs  main_tests.rs
bannertext/tests/: bannertext.rs  integration_tests.rs  output_tests.rs
bannertext/tests/Expectedoutput/: Execute_with_full_help_request_produces_arguments_list.example  Execute_with_help_request_produces_arguments_list.example
bannertext/tests/bannertext/: integration_tests.rs  output_tests.rs
hashcalc/: Cargo.toml  build.rs
hashcalc/src/: main.rs  main_tests.rs
hashcalc/src/hashers/: base64.rs  base64_tests.rs  md5.rs  md5_tests.rs  mod.rs  sha1.rs  sha1_tests.rs  sha256.rs  sha256_tests.rs  sha512.rs  sha512_tests.rs
hashcalc/tests/: hashcalc.rs  integration_tests.rs  output_tests.rs
hashcalc/tests/ExpectedOutput/: Execute_with_help_request_produces_arguments_list.example  Execute_with_text_only_base64_produces_expected_output.example  Execute_with_text_only_md5_produces_expected_output.example  Execute_with_text_only_sha1_produces_expected_output.example  Execute_with_text_only_sha256_produces_expected_output.example  Execute_with_text_only_sha512_produces_expected_output.example  execute_app_with_full_help_request_produces_arguments_list.example  execute_app_with_help_request_produces_arguments_list.example
hashcalc/tests/hashcalc/: output_tests.rs
printformat/: Cargo.toml
printformat/src/: main.rs  main_tests.rs
printformat/tests/: printformat.rs
printformat/tests/ExpectedOutput/: Execute_with_fill_char_produces_expected_output.example  Execute_with_help_request_produces_arguments_list.example  Execute_with_right_align_produces_expected_output.example  execute_app_with_2_placeholders_and_mixed_values_produces_expected_output.example  execute_app_with_center_aligned_character_padded_text_parameter_produces_expected_output.example  execute_app_with_center_aligned_text_parameter_produces_expected_output.example  execute_app_with_full_help_request_produces_arguments_list.example  execute_app_with_help_request_produces_arguments_list.example  execute_app_with_left_aligned_text_parameter_produces_expected_output.example  execute_app_with_right_aligned_text_parameter_produces_expected_output.example
printformat/tests/printformat/: integration_tests.rs  output_tests.rs
src/: main.rs
uuidgen/: Cargo.toml  build.rs
uuidgen/src/: main.rs  main_tests.rs
uuidgen/tests/: integration_tests.rs  output_tests.rs  uuidgen.rs
uuidgen/tests/ExpectedOutput/: Execute_for_5_instance_default_type_guid_produces_expected_output.example  Execute_for_5_instance_nanoid_produces_expected_output.example  Execute_for_default_type_guid_hyphenated_produces_expected_output.example  Execute_for_default_type_guid_hyphenated_uppercase_produces_expected_output.example  Execute_for_default_type_guid_produces_expected_output.example  Execute_for_default_type_guid_uppercase_produces_expected_output.example  Execute_for_nanoid_produces_expected_output.example  Execute_for_v6_guid_hyphenated_produces_expected_output.example  Execute_for_v6_guid_hyphenated_uppercase_produces_expected_output.example  Execute_for_v6_guid_produces_expected_output.example  Execute_for_v6_guid_uppercase_produces_expected_output.example  Execute_for_v7_guid_hyphenated_produces_expected_output.example  Execute_for_v7_guid_hyphenated_uppercase_produces_expected_output.example  Execute_for_v7_guid_produces_expected_output.example  Execute_for_v7_guid_uppercase_produces_expected_output.example  Execute_with_help_request_produces_arguments_list.example  execute_app_for_5_instance_default_type_guid_produces_expected_output.example  execute_app_for_5_instance_nanoid_produces_expected_output.example  execute_app_for_default_type_guid_hyphenated_produces_expected_output.example  execute_app_for_default_type_guid_hyphenated_uppercase_produces_expected_output.example  execute_app_for_default_type_guid_produces_expected_output.example  execute_app_for_default_type_guid_uppercase_produces_expected_output.example  execute_app_for_nanoid_produces_expected_output.example  execute_app_for_v6_guid_hyphenated_produces_expected_output.example  execute_app_for_v6_guid_hyphenated_uppercase_produces_expected_output.example  execute_app_for_v6_guid_produces_expected_output.example  execute_app_for_v6_guid_uppercase_produces_expected_output.example  execute_app_for_v7_guid_hyphenated_produces_expected_output.example  execute_app_for_v7_guid_hyphenated_uppercase_produces_expected_output.example  execute_app_for_v7_guid_produces_expected_output.example  execute_app_for_v7_guid_uppercase_produces_expected_output.example  execute_app_with_full_help_request_produces_arguments_list.example
uuidgen/tests/uuidgen/: integration_tests.rs  output_tests.rs
