[package]
name        = "bannertext"
authors     = [ "Martin Smith" ]
version     = "0.1.0-dev"
edition     = "2024"
description = "Display a Text Banner in the console"
readme      = "../README.md"
license     = "MIT OR Apache-2.0"
keywords    = [ "banner", "text" ]
categories  = [ "command-line-utilities" ]
repository  = "http://github.com/martinsmith1968/NativeConsoleApplicationsRUST"

[package.metadata.winresource]
LegalCopyright = "Copyright © 2025-2026 Martin Smith"

[dependencies]
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }

[build-dependencies]
winresource = "0.1.31"
build-print = "1.0.1"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"
