[package]
name       = "hashcalc"
authors    = [ "Martin Smith" ]
version    = "0.1.0-dev"
edition    = "2024"
description = "Generate a hash of text or file contents"
readme     = "../README.md"
license    = "MIT OR Apache-2.0"
keywords   = [ "hash", "sha", "md5" ]
categories = [ "command-line-utilities" ]
repository = "http://github.com/martinsmith1968/NativeConsoleApplicationsRUST"

[package.metadata.winresource]
ProductName    = "Calculate hashes of text / files in a variety of alogirthms"
LegalCopyright = "Copyright © 2022"

[dependencies]
clap = { version = "4.6.0", features = ["derive", "wrap_help"] }
sha2 = "0.11.0"
sha1 = "0.11.0"
md5  = "0.8.0"
hex  = "0.4.3"

[build-dependencies]
winresource = "0.1.31"

[dev-dependencies]
tempfile   = "3.27.0"
assert_cmd = "2.0"
predicates = "3.0"
